<resources>
    <string name="request_phone" translatable="false">ex)010-1234-1234</string>
    <string name="pay_card">ISP / 앱카드결제</string>
    <string name="sold_out" translatable="false">SOLD OUT</string>
    <string name="request_pw_option">8~30자 이내 특수문자 1개</string>
    <string name="add">+ 추가하기</string>
    <string name="delivery_cost_default">+3,000원</string>
    <string name="register_notice_explain">[회원가입] 메뉴를 통해 이용약관, 개인정보보호정책 동의 및 일정 양식의 가입항목을 기입함으로써 회원에 가입되며, 가입 즉시 서비스를 무료로 이용하실 수 있습니다.\n주문하실 때에 입력해야하는 각종 정보들을 일일이 입력하지 않으셔도 됩니다. 공동구매, 경매행사에 항상 참여하실 수 있습니다. 회원을 위한 이벤트 및 각종 할인행사에 참여하실 수 있습니다.</string>
    <string name="privacy_handle_agree_explain">** 본 양식은 쇼핑몰 운영에 도움을 드리고자 샘플로 제공되는 서식으로 쇼핑몰 운영형태에 따른 수정이 필요합니다. 쇼핑몰에 적용하시기 전, 쇼핑몰 운영 사항 등을 확인하시고 적절한 내용을 반영하여 사용하시기 바랍니다. **\n(주)○○○은 (이하 "회사"는) 고객님의 개인정보를 중요시하며, "개인정보 보호법" 등 관련 법령을 준수하고 있습니다.\n회사는 개인정보처리방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.\n■ 수집하는 개인정보 항목 및 수집방법\n가. 수집하는 개인정보의 항목\no 회사는 회원가입, 상담, 서비스 신청 등을 위해 아래와 같은 개인정보를 수집하고 있습니다.\n- 회원가입시 : 이름 , 생년월일 , 성별 , 로그인ID , 비밀번호 , 자택 전화번호 , 휴대전화번호 , 이메일 , 14세미만 가입자의 경우 법정대리인의 정보\n- 서비스 신청시 : 주소, 결제 정보\no 서비스 이용 과정이나 사업 처리 과정에서 서비스이용기록, 접속로그, 쿠키, 접속 IP, 결제 기록, 불량이용 기록이 생성되어 수집될 수 있습니다.\n나. 수집방법\n- 홈페이지, 서면양식, 게시판, 이메일, 이벤트 응모, 배송요청, 전화, 팩스, 생성 정보 수집 툴을 통한 수집\n■ 개인정보의 수집 및 이용목적\n회사는 수집한 개인정보를 다음의 목적을 위해 활용합니다.\no 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산\n콘텐츠 제공 , 구매 및 요금 결제 , 물품배송 또는 청구지 등 발송 , 금융거래 본인 인증 및 금융 서비스\no 회원 관리\n회원제 서비스 이용에 따른 본인확인 , 개인 식별 , 불량회원의 부정 이용 방지와 비인가 사용 방지 , 가입 의사 확인 , 연령확인 , 만14세 미만 아동 개인정보 수집 시 법정 대리인 동의여부 확인, 불만처리 등 민원처리 , 고지사항 전달\no 마케팅 및 광고에 활용\n이벤트 등 광고성 정보 전달 , 접속 빈도 파악 또는 회원의 서비스 이용에 대한 통계\n■ 개인정보의 보유 및 이용기간\n원칙적으로, 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 단, 다음의 정보에 대해서는 아래의 이유로 명시한 기간 동안 보존합니다.\n가. 회사 내부방침에 의한 정보보유 사유\n회원이 탈퇴한 경우에도 불량회원의 부정한 이용의 재발을 방지, 분쟁해결 및 수사기관의 요청에 따른 협조를 위하여, 이용계약 해지일로부터 oo년간 회원의 정보를 보유할 수 있습니다.\n나. 관련 법령에 의한 정보 보유 사유\n전자상거래등에서의소비자보호에관한법률 등 관계법령의 규정에 의하여 보존할 필요가 있는 경우 회사는 아래와 같이 관계법령에서 정한 일정한 기간 동안 회원정보를 보관합니다.\no 계약 또는 청약철회 등에 관한 기록\n-보존이유 : 전자상거래등에서의소비자보호에관한법률\n-보존기간 : 5년\no 대금 결제 및 재화 등의 공급에 관한 기록\n-보존이유: 전자상거래등에서의소비자보호에관한법률\n-보존기간 : 5년\no 소비자 불만 또는 분쟁처리에 관한 기록\n-보존이유 : 전자상거래등에서의소비자보호에관한법률\n-보존기간 : 3년\no 로그 기록\n-보존이유: 통신비밀보호법\n-보존기간 : 3개월\n■ 개인정보의 파기절차 및 방법\n회사는 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체없이 파기합니다. 파기절차 및 방법은 다음과 같습니다.\no 파기절차\n회원님이 회원가입 등을 위해 입력하신 정보는 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조) 일정 기간 저장된 후 파기되어집니다.\n별도 DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 보유되어지는 이외의 다른 목적으로 이용되지 않습니다.\no 파기방법\n전자적 파일형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.\n■ 개인정보 제공\n회사는 이용자의 개인정보를 원칙적으로 외부에 제공하지 않습니다. 다만, 아래의 경우에는 예외로 합니다.\no 이용자들이 사전에 동의한 경우\no 법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우\n■ 수집한 개인정보의 위탁\n회사는 서비스 이행을 위해 아래와 같이 외부 전문업체에 위탁하여 운영하고 있습니다.\no 위탁 대상자 : [택배사 이름]\no 위탁업무 내용 : [택배사 위탁 내용]\no 위탁 대상자 : [PG사 이름]\no 위탁업무 내용 : [PG사 위탁 내용]\no 위탁 대상자 : 공급업체 목록보기\no 위탁업무 내용 : [위탁업무 내용]\n\n 이용자 및 법정대리인의 권리와 그 행사방법\no 이용자는 언제든지 등록되어 있는 자신의 개인정보를 조회하거나 수정할 수 있으며 가입해지를 요청할 수도 있습니다.\no 이용자들의 개인정보 조회,수정을 위해서는 "개인정보변경"(또는 "회원정보수정" 등)을 가입해지(동의철회)를 위해서는 "회원탈퇴"를 클릭하여 본인 확인 절차를 거치신 후 직접 열람, 정정 또는 탈퇴가 가능합니다.\no 혹은 개인정보보호책임자에게 서면, 전화 또는 이메일로 연락하시면 지체없이 조치하겠습니다.\no 귀하가 개인정보의 오류에 대한 정정을 요청하신 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다. 또한 잘못된 개인정보를 제3자에게 이미 제공한 경우에는 정정 처리결과를 제3자에게 지체없이 통지하여 정정이 이루어지도록 하겠습니다.\no 회사는 이용자의 요청에 의해 해지 또는 삭제된 개인정보는 "회사가 수집하는 개인정보의 보유 및 이용기간"에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.\n■ 개인정보 자동수집 장치의 설치, 운영 및 그 거부에 관한 사항\n회사는 귀하의 정보를 수시로 저장하고 찾아내는 "쿠키(cookie)" 등을 운용합니다. 쿠키란 웹사이트를 운영하는데 이용되는 서버가 귀하의 브라우저에 보내는 아주 작은 텍스트 파일로서 귀하의 컴퓨터 하드디스크에 저장됩니다.\n회사은(는) 다음과 같은 목적을 위해 쿠키를 사용합니다.\no 쿠키 등 사용 목적\n1. 회원과 비회원의 접속 빈도나 방문 시간 등을 분석, 이용자의 취향과 관심분야를 파악 및 자취 추적, 각종 이벤트 참여 정도 및 방문 회수 파악 등을 통한 타겟 마케팅 및 개인 맞춤 서비스 제공\n2. 귀하는 쿠키 설치에 대한 선택권을 가지고 있습니다. 따라서, 귀하는 웹브라우저에서 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.\no 쿠키 설정 거부 방법\n1. 쿠키 설정을 거부하는 방법으로는 회원님이 사용하시는 웹 브라우저의 옵션을 선택함으로써 모든 쿠키를 허용하거나 쿠키를 저장할 때마다 확인을 거치거나, 모든 쿠키의 저장을 거부할 수 있습니다.\n2. 설정방법 예(인터넷 익스플로어의 경우) : 웹 브라우저 상단의 도구 > 인터넷 옵션 > 개인정보\n3. 단, 귀하께서 쿠키 설치를 거부하였을 경우 서비스 제공에 어려움이 있을 수 있습니다.\n■ 개인정보에 관한 민원서비스\n회사는 고객의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 관련 부서 및 개인정보보호책임자를 지정하고 있습니다.\no 개인정보보호담당자\n성명 : OOO\n소속 : OOO\n전화번호 : OO-OOO-OOOO\n이메일 :\no 개인정보보호책임자\n성명 : OOO\n소속 : OOO\n전화번호 : OO-OOO-OOOO\n이메일 :\no 귀하께서는 회사의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보보호책임자 혹은 담당부서로 신고하실 수 있습니다.\no 회사는 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다.\no 기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.\n개인정보침해신고센터 (privacy.kisa.or.kr / 국번 없이 118)\n개인정보분쟁조정위원회 (kopico.go.kr / 1833-6972)\n대검찰청 사이버수사과 (spo.go.kr / 지역번호+1301)\n경찰청 사이버안전국 (cyberbureau.police.go.kr / 국번없이 182)</string>
    <string name="detail_agree_2">** 본 양식은 쇼핑몰 운영에 도움을 드리고자 샘플로 제공되는 서식으로 쇼핑몰 운영형태에 따른 수정이 필요합니다. 쇼핑몰에 적용하시기 전, 쇼핑몰 운영 사항 등을 확인하시고 적절한 내용을 반영하여 사용하시기 바랍니다. **\n1. 개인정보 수집목적 및 이용목적\n가. 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산\n콘텐츠 제공 , 구매 및 요금 결제 , 물품배송 또는 청구지 등 발송 , 금융거래 본인 인증 및 금융 서비스\n나. 회원 관리\n회원제 서비스 이용에 따른 본인확인 , 개인 식별 , 불량회원의 부정 이용 방지와 비인가 사용 방지 , 가입 의사 확인 , 연령확인 , 만14세 미만 아동 개인정보 수집 시 법정 대리인 동의여부 확인, 불만처리 등 민원처리 , 고지사항 전달\n2. 수집하는 개인정보 항목 : 이름 , 생년월일 , 성별 , 로그인ID , 비밀번호 , 자택 전화번호 , 휴대전화번호 , 이메일 , 14세미만 가입자의 경우 법정대리인의 정보\n3. 개인정보의 보유기간 및 이용기간\n원칙적으로, 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 단, 다음의 정보에 대해서는 아래의 이유로 명시한 기간 동안 보존합니다.\n가. 회사 내부 방침에 의한 정보 보유 사유\no 부정거래 방지 및 쇼핑몰 운영방침에 따른 보관 : OO년\n나. 관련 법령에 의한 정보보유 사유\no 계약 또는 청약철회 등에 관한 기록\n-보존이유 : 전자상거래등에서의소비자보호에관한법률\n-보존기간 : 5년\no 대금 결제 및 재화 등의 공급에 관한 기록\n-보존이유: 전자상거래등에서의소비자보호에관한법률\n-보존기간 : 5년\no 소비자 불만 또는 분쟁처리에 관한 기록\n-보존이유 : 전자상거래등에서의소비자보호에관한법률\n-보존기간 : 3년\no 로그 기록\n-보존이유: 통신비밀보호법\n-보존기간 : 3개월\n※ 동의를 거부할 수 있으나 거부시 회원 가입이 불가능합니다.</string>
    <string name="delivery_notice_explain">- 모든 제품은 결제 완료 후 생산되므로 주문 후 당일 또는 최대 2일 이후부터 배송이 이루어집니다.\n- 대량주문 시 하루 생산량에 한계가 있으므로 여유를 두고 주문 부탁드리며, 주문 전 문의 바랍니다.</string>
    <string name="delivery_etc_explain">- 수제로 만드는 제품 특성상 크기가 일정하지 않을 수 있으며, 모니터 설정에 따라 실제 색상과 다소 차이가 있을 수 있습니다.\n- 궁전제과의 모든 제품은 안전한 위생검사와 품질검사를 마친 제품들로 안심하고 드실 수 있습니다.</string>
    <string name="delivery_post_explain">- 전국배송상품 : 택배로 전국 배송이 가능한 상품입니다.\n- 모든 제품의 배송비는 제품별로 조건이 다를 수 있습니다. (기본 배송비 3,000원)\n(일부 도서산간지역의 경우 항공료, 도선료 등의 추가 비용이 발생할 수 있습니다.)</string>
    <string name="delivery_gwangju_explain">-케익과 빵 제품은 광주광역시 내에서만 배송이 가능합니다. (단, 첨단 ‧ 하남 ‧ 비아 ‧ 평동공단 지역 제외)\n- 학교 내 교실 배달은 수업지장문제로 배송이 불가합니다.\n- 배송가능 시간은 오전 10시부터 오후 5시까지입니다.\n최소 주문금액은 22,000원입니다. (22,000원 미만 주문불가 / 배송비 3,000원)</string>
    <string name="change_recall_notice_explain">- 판매자 부주의로 생긴 교환 ‧ 반품의 경우 무상으로 처리됩니다.\n(오배송 ‧ 미배송 ‧ 파손 ‧ 불량의 경우, 수령 후 24시간 이내 요청)\n- 본 제품의 특성상 배송완료 후 고객의 단순변심에 의한 교환 ‧ 환불은 불가합니다.\n- 배송된 제품이 변질되거나 이상이 있을 경우 과실유무 판단 후 교환 ‧ 환불해 드립니다.\n(사진촬영필수)\n- 반드시 교환 ‧ 반품 전 고객센터(062-222-3477)에 접수하셔야 처리가 원활하게 진행됩니다.\n- 다음과 같은 경우에는 교환 ‧ 반품이 불가능합니다.\n① 구매자의 책임이 있는 사유로 상품이 멸실 또는 훼손된 경우\n② 포장을 개봉하였거나 포장이 훼손되어 상품 가치가 상실한 경우\n③ 구매자의 변심에 의한 교환 ‧ 반품인 경우 (제품 회수시 전량 폐기)\n④ 배송정보의 잘못된 입력으로 인한 오배송이나 미수령의 경우</string>
    <string name="change_recall_address_explain">- [61482] 광주광역시 동구 충장로 93-6 (충장로1가) 궁전제과 충장점</string>
    <string name="delivery_gwangju">&lt;광주배송&gt;</string>
    <string name="delivery_etc">&lt;기타 유의사항&gt;</string>
    <string name="delivery_notice_cramps">&lt;배송안내&gt;</string>
    <string name="privacy">개인정보</string>
    <string name="privacy_handle_agree_no_arrow">개인정보취급방침</string>
    <string name="privacy_handle_agree">개인정보취급방침 ></string>
    <string name="agree_2_title">개인정보 수집 및 이용 동의</string>
    <string name="agree_2">개인정보 수집 및 이용 동의 [필수]</string>
    <string name="search">검색</string>
    <string name="no_search">검색결과가 없습니다.</string>
    <string name="pay_method">결제방법</string>
    <string name="pay_detail">결제상세</string>
    <string name="pay_notice">결제안내</string>
    <string name="pay">결제하기</string>
    <string name="pay_transfer">계좌이체</string>
    <string name="pay_notice_explain">고액결제의 경우 안전을 위해 카드사에서 확인전화를 드릴 수도 있습니다. 확인과정에서 도난 카드의 사용이나 타인 명의의 주문등 정상적인 주문이 아니라고 판단될 경우 임의로 주문을 보류 또는 취소할 수 있습니다.\n\n무통장 입금은 상품 구매 대금은 PC뱅킹, 인터넷뱅킹, 텔레뱅킹 혹은 가까운 은행에서 직접 입금하시면 됩니다.\n주문시 입력한 입금자명과 실제입금자의 성명이 반드시 일치하여야 하며, 7일 이내로 입금을 하셔야 하며 입금되지 않은 주문은 자동취소 됩니다.</string>
    <string name="favorite">관심상품</string>
    <string name="empty_favorite">관심상품 내역이 없습니다.</string>
    <string name="change">교환</string>
    <string name="change_and_recall_info_no_arrow">교환및 반품 정보</string>
    <string name="change_and_recall_info">교환및 반품 정보 ></string>
    <string name="change_recall_notice">교환 및 반품 안내</string>
    <string name="change_recall_address">교환 및 반품 주소</string>
    <string name="app_name" translatable="false">궁전제과</string>
    <string name="delivery_default">기본배송</string>
    <string name="delivery_default_address">기본배송지</string>
    <string name="etc">기타</string>
    <string name="etc_notice">기타안내</string>
    <string name="age">나이</string>
    <string name="select_age">나이를 선택해 주세요</string>
    <string name="content">내용</string>
    <string name="next">다음</string>
    <string name="just_cancel">단순변심</string>
    <string name="enroll">등록</string>
    <string name="enroll_do_it">등록하기</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="go_login">로그인 화면으로</string>
    <string name="login_comment">맛있는 궁전제과 빵들을 구매해보세요!</string>
    <string name="sell_shop">매장판매</string>
    <string name="qa">문의</string>
    <string name="qa_do_it">문의하기</string>
    <string name="direct_pay">바로구매</string>
    <string name="recall">반품</string>
    <string name="delivery_and_payment_info_no_arrow">배송및 상품 결제 정보</string>
    <string name="delivery_and_payment_info">배송및 상품 결제 정보 ></string>
    <string name="delivery_cost">배송비</string>
    <string name="finish_delivery">배송완료</string>
    <string name="delivery_info">배송정보</string>
    <string name="ing_delivery">배송중</string>
    <string name="delivery_notice">배송안내</string>
    <string name="ready_delivery">배송준비중</string>
    <string name="order_address">배송지</string>
    <string name="delivery_option">배송 방법 : 택배\n배송 지역 : 전국지역\n배송 비용 : 3,000원\n배송 기간 : 3일 ~ 7일</string>
    <string name="order_notice_explain">상품주문은 다음단계로 이루어집니다.\n\n- Step1: 상품검색\n- Step2: 장바구니에 담기\n- Step3: 회원ID 로그인 또는 비회원 주문\n- Step4: 주문서 작성\n- Step5: 결제방법선택 및 결제\n- Step6: 주문 성공 화면 (주문번호)\n\n비회원 주문인경우 6단계에서 주문번호와 승인번호(카드결제시)를 꼭 메모해 두시기 바랍니다. 단, 회원인 경우 자동 저장되므로 따로 관리하실 필요가 없습니다.</string>
    <string name="terminate_condition_notice">소멸조건</string>
    <string name="edit">수정</string>
    <string name="name_no_star">이름</string>
    <string name="request_name">이름을 입력해주세요</string>
    <string name="email_no_star">이메일</string>
    <string name="request_email">이메일을 입력해주세요</string>
    <string name="etc_notice_explain">이용기간\n주문으로 발생한 적립금은 배송완료 체크시점으로 부터 20일이 지나야 실제 사용 가능 적립금으로 변환됩니다. 20일 동안은 미가용 적립금으로 분류 됩니다. 미가용 적립금은 반품, 구매취소 등을 대비한 실질적인 구입이 되지 않은 주문의 적립금 입니다.\n사용가능한 적립금(총 적립금-사용된적립금-미가용적립금)은 상품구매시 즉시 사용하실 수 있습니다.</string>
    <string name="information_use_no_arrow">이용안내</string>
    <string name="use_condition_notice">이용조건</string>
    <string name="shopping_list">장바구니</string>
    <string name="save">저장</string>
    <string name="use_condition_notice_explain">적립금사용시 최소구매가능적립금(구매가능한 적립금 요구선)은 3,000원 입니다. 적립금 사용시 최대구매가능적립금(적립금 1회 사용 가능 최대금액)은 \'한도제한없음\' 입니다.</string>
    <string name="terminate_condition_notice_explain">주문취소/환불시에 상품구매로 적립된 적립금은 함께 취소됩니다. 회원 탈퇴시에는 적립금은 자동적으로 소멸됩니다. 최종 적립금 발생일로부터 3년 동안 추가적립금 누적이 없을 경우에도 적립금은 소멸됩니다.</string>
    <string name="order_notice">주문 안내</string>
    <string name="profile">프로필</string>
    <string name="home">홈</string>
    <string name="refund_notice_explain">환불시 반품 확인여부를 확인한 후 3영업일 이내에 결제 금액을 환불해 드립니다.\n신용카드로 결제하신 경우는 신용카드 승인을 취소하여 결제 대금이 청구되지 않게 합니다.\n(단, 신용카드 결제일자에 맞추어 대금이 청구 될수 있으면 이경우 익월 신용카드 대금청구시 카드사에서 환급처리됩니다.)</string>
    <string name="refund_notice">환불안내</string>
    <string name="register_notice">회원가입 안내</string>
    <string name="phone">휴대전화</string>
</resources>