<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/shoppingListFragment"
        android:icon="@drawable/ic_shopping_list"
        android:title="@string/shopping_list" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/ic_my_page"
        android:title="@string/profile" />
</menu>
