<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="informationUseNotice"
            type="com.example.ggjg_andorid.ui.agree_notice.InformationUseNoticeActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/infoBarBottomLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:onClick="@{informationUseNotice::onClick}"
            app:layout_constraintBottom_toBottomOf="@id/infoBarBottomLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_use_no_arrow"
            android:textColor="@color/real_black"
            app:layout_constraintBottom_toBottomOf="@id/infoBarBottomLine"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoBarBottomLine">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/changeStartLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/changeEndLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="@id/changeEndLine"
                    app:layout_constraintStart_toStartOf="@id/changeStartLine">

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/register_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/register_notice_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/order_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/order_notice_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/pay_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/pay_notice_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/delivery_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/delivery_option"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:text="@string/delivery_notice_cramps"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineHeight="21sp"
                        android:text="@string/delivery_notice_explain"
                        android:textColor="@color/real_black" />


                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/delivery_gwangju_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/delivery_etc"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/delivery_etc_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/change_recall_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineHeight="21sp"
                        android:text="@string/change_recall_address"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/change_recall_address_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:text="@string/refund_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/refund_notice_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/etc_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/etc_notice_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/use_condition_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:text="@string/use_condition_notice_explain"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Bold14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/terminate_condition_notice"
                        android:textColor="@color/real_black" />

                    <TextView
                        style="@style/Regular14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:lineHeight="21sp"
                        android:paddingBottom="40dp"
                        android:text="@string/terminate_condition_notice_explain"
                        android:textColor="@color/real_black" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>