<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="myPageEdit"
            type="com.ggjg.presentation.ui.my_page.MyPageEditFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/registerBarBottomLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="48dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:onClick="@{myPageEdit::onClick}"
            app:layout_constraintBottom_toBottomOf="@id/registerBarBottomLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/real_black"
            app:layout_constraintBottom_toBottomOf="@id/registerBarBottomLine"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTxt"
            style="@style/Bold12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/name_no_star"
            android:textColor="@color/real_black"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/registerBarBottomLine" />

        <EditText
            android:id="@+id/writeName"
            style="@style/Medium14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_input_layout"
            android:hint="@string/request_name"
            android:paddingHorizontal="12dp"
            android:paddingVertical="17dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/nameTxt" />

        <TextView
            android:id="@+id/emailTxt"
            style="@style/Bold12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email_no_star"
            android:textColor="@color/real_black"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/writeName" />

        <EditText
            android:id="@+id/writeEmail"
            style="@style/Medium14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_input_layout"
            android:hint="@string/request_email"
            android:paddingHorizontal="12dp"
            android:paddingVertical="17dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/emailTxt" />

        <TextView
            android:id="@+id/errorEmailTxt"
            style="@style/Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/writeEmail" />

        <TextView
            android:id="@+id/phoneTxt"
            style="@style/Bold12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/phone"
            android:textColor="@color/real_black"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/errorEmailTxt" />

        <EditText
            android:id="@+id/writePhone"
            style="@style/Medium14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_input_layout"
            android:hint="@string/request_phone"
            android:paddingHorizontal="12dp"
            android:paddingVertical="17dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/phoneTxt" />

        <TextView
            android:id="@+id/errorPhoneTxt"
            style="@style/Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toBottomOf="@id/writePhone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            style="@style/Bold14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@drawable/selector_form_btn"
            android:enabled="false"
            android:onClick="@{myPageEdit::onClick}"
            android:paddingVertical="17dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>